# Proyecto-Integrador-Analitica-Negocios-main

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/skills/verify/: SKILL.md
.streamlit/: config.toml
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  hero.py  pie_pagina.py  silenciar_asyncio.py  tarjeta_kpi.py
dashboard/data/: __init__.py  cargar_datos.py  cargar_reporte_calidad.py  rutas.py
dashboard/tabs/: __init__.py  datos.py  descriptiva.py  diagnostica.py  portada.py  predictiva.py  prescriptiva.py
dashboard/theme/: __init__.py  colores.py  css.py  plotly_template.py
data/processed/: homicidios_procesados.csv  reporte_calidad.json
informe/: Informe_SafeAnalytics_EC.docx
powerbi/: GUIA_POWER_BI.md
reports/: ranking_riesgo_cantones.csv  resumen_analitico.json  tendencia_mensual.csv
src/analytics/: eda.py
src/etl/: transform_load.py
src/informe/: generar_informe.py
