[project]
name = "safeanalytics-ec"
version = "0.1.0"
description = "Analítica estratégica de homicidios intencionales en Ecuador"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas==3.0.3",
    "numpy>=2.0",
    "scikit-learn==1.9.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy==1.16.3",
    "requests>=2.32",
    "openpyxl>=3.1",
    "joblib>=1.4",
    "streamlit>=1.40",
    "plotly>=5.24",
    "python-docx>=1.1",
]

[tool.uv]
package = false
# El proyecto vive en OneDrive; el hardlink por defecto falla ahí (os error 396).
link-mode = "copy"
